Added the second section

--- a/index.html
+++ b/index.html
@@ -9,25 +9,49 @@
 
 </head>
 <body>
+            <!--########...Header and First Section...#############-->
     <div class="head">
         <div class="header">
-            <img src="images/car_logo.png" alt:="car_logo" id="car_logo">
+            <img src="images/car_logo.png" alt:="car_logo" class="car_logo">
               <div class="links">
                 <a href="##" >header link one</a>
                 <a href="##">header link two</a>
                 <a href="##"> header link tree </a>
               </div>
         </div>
-        
         <div class="hero_content">
             <div class="left_side">
             <h1>This website is awesome</h1>
-            <div id="head_text">This website has some subtext that goes here under the main title. Its smaller font and the color is lower contrast.</div>
+            <div class="head_text">This website has some subtext that goes here under the main title. Its smaller font and the color is lower contrast.</div>
             <button class="button">Sign up</button>
             </div>
             <div class="titel_picture">This is a picture of an amazing car</div>
         </div>
-    
     </div>
+
+            <!--############...Second Section...###################-->
+    <div class="second_section">
+        <h2 class="second_heading">Some Random information</h2>
+        <div class="sections">
+            <div class="section">
+                <image src="images/Black.png"></image>
+                <div>I'm some random subtext just to illustrate an example. How are you btw? oh thats nice to hear.</div>
+            </div>
+            <div class="section">
+                <image src="images/Black.png"></image>
+                <div>I'm some random subtext just to illustrate an example. How are you btw? oh thats nice to hear.</div>
+            </div>
+            <div class="section">
+                <image src="images/Black.png"></image>
+                <div>I'm some random subtext just to illustrate an example. How are you btw? oh thats nice to hear.</div>
+            </div>
+            <div class="section">
+                <image src="images/Black.png"></image>
+                <div>I'm some random subtext just to illustrate an example. How are you btw? oh thats nice to hear.</div>
+            </div>
+        </div>
+    </div>
+
+
 </body>
 </html>
