Adding Quote_Section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
         </div>
     </div>
 
+            <!--###########...Quote_Section...###########-->
+    <div class="quote_section">
+        <div class="quote">
+            "A car has its own emotions and heart. You have to love it accordigly."
+        </div>
+        <div class="quoter">-Juan Manuel Fangio</div>
+    </div>
+
 
 </body>
 </html>
