Adding Appointment_Box_Section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
         <div class="quoter">-Juan Manuel Fangio</div>
     </div>
 
+            <!--############...Appointment-Window...###############-->
+    <div class="appointment">
+        <div class="appointment_box">
+            <div class="appointment_text">
+                <div class="appointment_heading">Take your driving expirience to the next level now!</div>
+                <div class="appointment_content">Click the button and get started changing the way driving feels forever!</div>
+            </div>
+            <button class="button" id="appointment_button">Get started</button>
+        </div>
+    </div>
+
+            <!--############...Footer...####################-->
+    
+
 
 </body>
 </html>
