--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
     </div>
 
             <!--############...Footer...####################-->
-    
-
+    <div class="footer">
+        <div class="footer_text">Copyright &copy; Emir Selimovic 2022</div>
+    </div>
 
 </body>
 </html>
